# agentic-coding-ui

./: .env.example  CLAUDE.md  README.md  docker-compose.yml  justfile  pyproject.toml
.github/workflows/: lint.yaml  run-security-checks.yaml  run_tests.yaml  vulture.yaml
backend/: .mypy.ini  .ruff.toml  pyproject.toml
backend/app/: app.py  config.py  main.py
backend/app/common/: features.py  models.py
backend/app/db/: connection.py  queries.py
backend/app/health/: models.py  routes.py
backend/app/mcp/: client.py  exceptions.py  models.py
backend/app/sessions/: exceptions.py  features.py  models.py  routes.py
backend/app/sessions/adapters/: session_store.py
backend/app/ws/: manager.py  routes.py
backend/tests/: conftest.py  test_app.py  test_config.py  test_main.py
backend/tests/common/: test_models.py
backend/tests/db/: test_connection.py  test_queries.py
backend/tests/health/: test_routes.py
backend/tests/mcp/: test_client.py  test_models.py
backend/tests/sessions/: test_features.py  test_routes.py
backend/tests/sessions/adapters/: test_session_store.py
backend/tests/ws/: test_manager.py  test_routes.py
devops/: build_docker.sh  portal-up.sh
docker/: Dockerfile  Dockerfile.frontend  docker-entrypoint.sh
frontend/: Dockerfile  index.html  nginx.conf  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  types.ts
frontend/src/api/: client.ts
frontend/src/components/: ContextHistory.tsx  DiffViewer.tsx  JsonPanel.tsx  LiveMonologue.tsx  NewSessionForm.tsx  SessionCard.tsx  SessionDashboard.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx
frontend/src/hooks/: useWebSocket.ts
